--- a/hotels.css
+++ b/hotels.css
@@ -226,7 +226,7 @@ footer {
   inset: 0;
   z-index: -1; /* Place the grid behind the content of .background-container */
   background-image:
-    linear-gradient(to right, rgba(235, 226, 226, 0.06) 1px, transparent 1px),
+    linear-gradient(to right, rgba(37, 43, 94, 0.288) 1px, transparent 1px),
     linear-gradient(to bottom, rgba(65, 57, 57, 0.06) 1px, transparent 1px),
     radial-gradient(circle, rgba(8, 8, 8, 0.384) 1px, transparent 1px);
   background-size: 20px 20px, 20px 20px, 20px 20px;
@@ -280,7 +280,7 @@ body, html {
     .content h1 {
       letter-spacing: 0.5rem; /* Reduced letter spacing */
       font-size: 4.5rem;     /* Reduced font size */
-      color: #091eda; /* Adjusted color for better visibility on video */
+      color: #184988; /* Adjusted color for better visibility on video */
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Add text shadow for readability */
       white-space: nowrap; /* Ensure single line */
     }
